makko/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - talos-73x-rd9
      containers:
      - image: jellyfin/jellyfin:10.11.11
        name: jellyfin
        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        ports:
        - containerPort: 8096
        resources:
          limits:
            memory: 4096Mi
            ephemeral-storage: 8Gi
          requests:
            cpu: "0.1"
            memory: 2048Mi
      volumes:
      - name: cache
        emptyDir:
          sizeLimit: 128Gi
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
          readOnly: false
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-data
          readOnly: false
